# Image-Caption-Generation-VIT-From-Scratch

./: .gitignore  data.py  data_preprocessing.py  main.py  model_args.py  pyproject.toml  test.ipynb  tokenizer.py  train.py  utils.py  vit.py
